# model-training

./: .gitignore  GitVersion.yml  Makefile  README.md  VERSION  bandit.yaml  dvc.yaml  generate_requirements.py  pylintrc  pyproject.toml  pytest-coverage.txt  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: linting.yaml  release.yml  tests.yml
linter_ml_rules/flake8/: check_kwarg_dataset_split.py
linter_ml_rules/pylint/: check_random_state_dataset_split.py
linter_rules/flake8/: check_kwarg_dataset_split.py  setup.py
linter_rules/pylint/: check_random_state_dataset_split.py  plugin.py
metrics/: metrics.json
models/: cv-20250523.pkl  cv-20250524.pkl  cv-20250602.pkl  model-20250622.pkl
notebooks/: exploration.ipynb
pylint_ml_rules/: check_random_state_dataset_split.py  plugin.py
src/data/: get_data.py
src/dataset/: get_data.py  pre_process.py
src/model/: train.py
src/modeling/: evaluate.py  train.py
src/sentiment-analysis/: train.py
tests/: calculate_ML_test_score.py  calculate_ml_test_score.py  test_data.py  test_infrastructure.py  test_model.py  test_monitoring.py  test_mutamorphic.py
tmp/: .gitignore  X_test.joblib  corpus.joblib  corpus_processed.joblib  raw_labels.joblib  y.joblib  y_test.joblib
