[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Model Training with ML configuration management"
authors = [
  { name = "team18" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "joblib==1.5.0",
    "numpy==1.24.0", 
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "threadpoolctl==3.6.0",
    "pandas==2.2.3",
    "lib-ml @ git+https://github.com/remla25-team18/lib-ml.git@v0.0.8",
    "dvc==3.59.2",
    "gdown==5.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pylint==3.3.7",
    "coverage-badge==1.1.2",
    "flake8==7.2.0",
    "bandit==1.8.3",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "coverage-badge==1.1.2"
]
requires-python = "~=3.11.0"

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "isort",
    "ipython",
    "jupyterlab",
    "notebook",
]

[tool.pytest.ini_options]


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


